--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,4 +7,50 @@
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
+
+	<servlet>
+		<servlet-name>login</servlet-name>
+		<servlet-class>com.revature.reimbursement.Servlet.LoginServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>login</servlet-name>
+		<url-pattern>login</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>viewAllReimb</servlet-name>
+		<servlet-class>com.revature.reimbursement.Servlet.ViewAllReimbServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>viewAllReimb</servlet-name>
+		<url-pattern>/App/home</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>logout</servlet-name>
+		<servlet-class>com.revature.reimbursement.Servlet.LogoutServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>logout</servlet-name>
+		<url-pattern>/App/logout</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>viewReimbsByStatus</servlet-name>
+		<servlet-class>com.revature.reimbursement.Servlet.ViewReimbsByStatusServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>viewReimbsByStatus</servlet-name>
+		<url-pattern>/App/ViewReimbsByStatus</url-pattern>
+	</servlet-mapping>
+
+	<filter>
+		<filter-name>auth</filter-name>
+		<filter-class>com.revature.reimbursement.Servlet.AuthFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>auth</filter-name>
+		<url-pattern>/App/*</url-pattern>
+	</filter-mapping>
+
 </web-app>
